2015-06-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Updated.

2015-05-01  Tiago Sturmer Daitx  <tdaitx@linux.vnet.ibm.com>

	PR2328: GCJ uses ppc64el named libarch directory on ppc64le
	* Makefile.am:
	(bootstrap-directory-stage1): Handle boot JDK having
	a ppc64el directory by symlinking to ppc64le.

2015-06-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2394: ppc64le does not support -Xshare:dump
	* Makefile.am:
	(add-archive): Exclude ppc64le as well as ppc64.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.
	* NEWS: Updated.

2015-04-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	Update build following PR2233 & PR2236.
	* Makefile.am:
	(ICEDTEA_ENV): Set SYSTEM_GSETTINGS.
	(bootstrap-directory-stage1): Update ppc64le
	workaround for 2.5.x ppc64 -> 2.6.x ppc64le
	transition rather than 2.4.x ppc64le -> 2.5.x
	ppc64 transition.
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Update powerpc64le
	to use ppc64le for arch directory.
	(IT_ENABLE_ZERO_BUILD): Include ppc64le in
	ZERO_LIBARCH test, as ZERO_LIBARCH is based
	on INSTALL_ARCH_DIR.
	(IT_CHECK_FOR_GIO): Make GSettings API optional.

2015-04-16  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.5.5 release notes.

2015-04-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(JDK_CHANGESET): Include version update for raw
	OpenJDK builds.
	(JDK_SHA256SUM): Likewise.

2015-04-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-2.6pre20.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(ICEDTEA_BOOT_PATCHES): Turn on new underscored literals
	patch when the compiler doesn't support them.