@@ -278,6 +278,7 @@ New in release 2.6.0 (2014-XX-XX):
   - PR2236: ppc64le should report its os.arch as ppc64le so tools can detect it
   - PR2328: GCJ uses ppc64el named libarch directory on ppc64le
   - PR2394: ppc64le does not support -Xshare:dump
+  - PR2395: Path to jvm.cfg is wrong in add-systemtap-boot
 
 New in release 2.5.5 (2015-04-14):
 
